sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:5: error: '=' expected but ';' found.
  var tri= true
^