sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var debut = 0
  var fin gatNombreValeurs()-2
  var tri= true
  while(tri){
    tri= false
    for(i<- debut to fin){
      if(plusPetit(i,i+1)){
        echange(i,i+1)
        fin-=1
        tri = true
      }
    }
    for(i<- fin to debut by -1){
      if(plusPetit(i,i+1)){
        echange(i,i+1)
        debut+=1
        tri = true
      }
    }
  }
}